<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".AvanzadaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold"
            tools:text="88.88" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="7"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="8"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="9"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple"
            android:gravity="center"
            android:onClick="operacion"
            android:text="/"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="4"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="6"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple"
            android:gravity="center"
            android:onClick="operacion"
            android:text="*"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="2"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple"
            android:gravity="center"
            android:onClick="operacion"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="borrar"
            android:text="Borrar"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="numero"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:gravity="center"
            android:onClick="punto"
            android:text="."
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple"
            android:gravity="center"
            android:onClick="operacion"
            android:text="+"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEqu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/purple"
            android:gravity="center"
            android:onClick="calcular"
            android:text="="
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>